--- a/css/styles.css
+++ b/css/styles.css
@@ -69,11 +69,22 @@ h2 {
   margin-left: 4px;
 }
 
-.reference-input input {
+.form-control input[type="text"] {
   height: 30px;
-  width: 30px;
+  width: 40px;
   text-align: center;
   margin-left: 1rem;
+}
+
+/* Novas funcionalidas */
+#color-value {
+  min-width: 100px;
+}
+
+#inset {
+  align-self: flex-start;
+  height: 20px;
+  width: 20px;
 }
 
 /* Preview */
@@ -90,6 +101,8 @@ h2 {
 
 #generated-rule p {
   margin-bottom: 0.5rem;
+  margin-bottom: 2rem;
+  padding: 0 2rem;
 }
 
 #rules-area {
@@ -98,4 +111,37 @@ h2 {
   margin: 0 auto;
   border: 2px solid #e9490a;
   padding: 1rem;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+#rules-area:hover {
+  background-color: #dfdfdf;
+}
+
+#copy-instructions {
+  font-style: italic;
+  margin-top: 1rem;
+}
+
+/* Media query */
+@media (max-width: 425px) {
+  #box-shadow-generator {
+    flex-direction: column;
+  }
+
+  #controls-container,
+  #preview {
+    padding: 1rem 2rem;
+  }
+
+  #box {
+    width: 60%;
+    height: 200px;
+    margin: 0 auto;
+  }
+
+  #generated-rule {
+    margin-top: 2rem;
+  }
 }
